Make sure colvis buttons do not spill over

--- a/css/bootstrap-overrides.css
+++ b/css/bootstrap-overrides.css
@@ -568,3 +568,8 @@ path[stroke-width="6.5"] {
 div.google-visualization-tooltip {
     pointer-events: none;
 }
+
+/* Revise colvis buttons */
+a.dt-button {
+    white-space: normal;
+}
